--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
-	
+	<link rel="stylesheet" href="Lato/Lato-Regular.ttf">
 
 	<style>
 
@@ -22,15 +22,17 @@
 		<style type="text/css">
 			.path{ fill: transparent; }
 			.st0{fill:transparent;stroke:#26a69a;stroke-width:4; stroke-dasharray: 1000 1000;	
-  			stroke-dashoffset: 1000;}
+  			stroke-dashoffset: 1000; opacity: .7;}
 			.st_clon{fill:transparent;stroke:#FFFFFF;stroke-width:2;opacity: .3; stroke-dasharray: 6; stroke-dashoffset: 10; }
 			.st1{fill:#CCCCCC;stroke:#FFFFFF;stroke-width:0.5;}
-			.st2{fill:#000;stroke:#FFFFFF;stroke-width:2;}
+			.st2{fill:#5d5c56;;stroke:none;stroke-width:2;}
 			.st0{
 			stroke-linecap: round;
 			}
 			g#map path{
-				fill: #cccccc;
+				fill: #e8e3c4;
+				stroke: #5d5c56;
+				opacity: .3;
 			}
 			.anim{
 				stroke-dasharray: 1000;
@@ -1179,6 +1181,7 @@
 					<figcaption>All things come to an end, and so did our journey when we reached the end of the main street in Reykjavik</figcaption>
 				</figure>
 				<p>We caught glimpses of faces at most of the windows peering curiously at us and watching our progress through the town. Many of the members of the groups, by the wayside saluted as we passed by—the Icelanders are a polite people, as a rule, and they doff their head-gear in salutation to strangers. So we progressed, being saluted, and acknowledging the salutes. It was a sort of triumphal entry, for the news had been carried forward by one of the guides, who was some little distance ahead with some of the pack-ponies, that we had just crossed the country by way of the uninhabited interior. All things come to an end, and so did our journey when we reached the end of the main street in Reykjavik, for there, at a great wooden building four stories high, we took up our quarters, and the crossing of Iceland was an accomplished fact.</p>
+				<p>We were six in all—a semi-scientific party. There was Miss J. A. Hastie, a woman who has travelled much in Europe, Asia, Africa, and America, and who is not unacquainted with our Colonies at the Antipodes, or with the islands of the South Seas. She was specially interested in the botany of the country, in its folklore, and in the people. Then there was Captain W. H. Cope; he had been at sea for the greater part of his life, and had in the course of his journeyings seen much of the world; he was our nautical adviser, and we referred to him in matters connected with the sea. W. Glen, Miss Hastie's cousin, was known as the "handy man" of the party. If anybody was in difficulties, Glen was always on the spot to lend a helping hand. He produced all sorts of things at the right moment. Did any one require a screw-driver, then Glen had it; want a corkscrew, Glen could supply it; a pair of scissors, he produced them—some string, a strap, it was all the same. If a camera struck work, Glen could render the strike ineffective, for he carried two, and could lend one without interfering with his own photographic work. A. W. Hill, of King's College, Cambridge, was our botanist—who describes what he saw. H. H. Thomas, of Balliol, paid special attention to the geological formation of the country that we traversed, and he was frequently to be seen, camera in hand, taking shots at interesting formations—a glaciated lava surface, a volcanic vent, or an immense "erratic" boulder or "perched block," for instance; he also sketched industriously, and sometimes paced the ground compass in hand in order that he might record in his note-book the direction of a line of fissure, or the position of hot springs along that line; or something else of interest to geologists in particular. I was the geographer, whose mission it was to make a map of a small portion of the country traversed, to get a general idea of its conformation, and to note valleys and mountains, ice-fields and snow slopes, lava flows and hot springs, mighty rivers and tiny rivulets.</p>
 			</section>
 			<section class="js-section" data-zoom="120%" data-pos="-20%">
 				<h2><span class="title-up">Reykjanesta</span><span class="title-down">A Helping Hand</span></h2>
