adaptive map, almost fixed img plugins

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Document</title>
+
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="Lato/Lato-Regular.ttf">
+	<link rel="stylesheet" type="text/css" href="slick/slick/slick.css"/>
 
 	<style>
 
@@ -17,7 +19,7 @@
 <!-- 	<canvas id="myCanvas" width="100%" height="100%"
 		style="border:1px solid #c3c3c3;"></canvas> -->
 <div class="bg_svg" style="left: 50%;">
-<svg  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"  width="1920px" height="1200px" viewBox="0 0 1920 1200" style="enable-background:new 0 0 1920 1200;" xml:space="preserve">
+<svg class="my-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"  width="1920px" height="1200px" viewBox="0 0 1920 1200" style="enable-background:new 0 0 1920 1200;" xml:space="preserve">
 <defs>
 		<style type="text/css">
 			.path{ fill: transparent; }
@@ -1171,19 +1173,23 @@
 
 
 <div class="text_wrapper" >
-<section class="js-section" data-zoom="110%" data-pos="40%" >
+<section class="js-section" data-zoom="110%" data-pos_large="20%" data-pos_medium="10%" data-pos_small="-40%" data-pos_extrasmall = "-40%" data-pos="40%" >
 				<h2><span class="title-up">Reykjavík</span><span class="title-down">The Adventure Begins</span></h2>
 				<p class="text-intro">We caught glimpses of faces at most of the windows peering curiously at us and watching our progress through the town.</p>
 				<p>Much to our surprise, when about two miles outside Reykjavik, we met our fellow-passenger by the Ceres, him with whom we had lunched at Thorshavn on the outward journey. We had left him behind at that port, and he had intended to stay for several weeks at the Faroes and to return thence to England; but having found things rather slow there, he had followed us to Iceland by the next steamer; hence the meeting on the road.</p>
 				<p>We created some sort of sensation as we entered the capital of Iceland. The clocks were striking ten as we clattered down the long main street; it was a time when the populace were at leisure and on the street, and they evinced no little curiosity as we rode by them. They were congregated in small groups, and it was evident to us that we were being discussed—and no wonder, for we were a motley-looking cavalcade! We must have presented a very grotesque appearance, clad as we were in oilskins, and covered with mud from head to foot: it had been raining at intervals on the way, and we had had a rather disagreeable journey. </p>
 				<figure>
-					<img class="js-image1" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/9.jpg" />
+				<div class="slider">
+					<div><img class="js-image1" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/9.jpg" /></div>
+					<div><img class="js-image1" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/5.jpg" /></div>
+					<div><img class="js-image1" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/3.jpg" /></div>
+				</div>	
 					<figcaption>All things come to an end, and so did our journey when we reached the end of the main street in Reykjavik</figcaption>
 				</figure>
 				<p>We caught glimpses of faces at most of the windows peering curiously at us and watching our progress through the town. Many of the members of the groups, by the wayside saluted as we passed by—the Icelanders are a polite people, as a rule, and they doff their head-gear in salutation to strangers. So we progressed, being saluted, and acknowledging the salutes. It was a sort of triumphal entry, for the news had been carried forward by one of the guides, who was some little distance ahead with some of the pack-ponies, that we had just crossed the country by way of the uninhabited interior. All things come to an end, and so did our journey when we reached the end of the main street in Reykjavik, for there, at a great wooden building four stories high, we took up our quarters, and the crossing of Iceland was an accomplished fact.</p>
 				<p>We were six in all—a semi-scientific party. There was Miss J. A. Hastie, a woman who has travelled much in Europe, Asia, Africa, and America, and who is not unacquainted with our Colonies at the Antipodes, or with the islands of the South Seas. She was specially interested in the botany of the country, in its folklore, and in the people. Then there was Captain W. H. Cope; he had been at sea for the greater part of his life, and had in the course of his journeyings seen much of the world; he was our nautical adviser, and we referred to him in matters connected with the sea. W. Glen, Miss Hastie's cousin, was known as the "handy man" of the party. If anybody was in difficulties, Glen was always on the spot to lend a helping hand. He produced all sorts of things at the right moment. Did any one require a screw-driver, then Glen had it; want a corkscrew, Glen could supply it; a pair of scissors, he produced them—some string, a strap, it was all the same. If a camera struck work, Glen could render the strike ineffective, for he carried two, and could lend one without interfering with his own photographic work. A. W. Hill, of King's College, Cambridge, was our botanist—who describes what he saw. H. H. Thomas, of Balliol, paid special attention to the geological formation of the country that we traversed, and he was frequently to be seen, camera in hand, taking shots at interesting formations—a glaciated lava surface, a volcanic vent, or an immense "erratic" boulder or "perched block," for instance; he also sketched industriously, and sometimes paced the ground compass in hand in order that he might record in his note-book the direction of a line of fissure, or the position of hot springs along that line; or something else of interest to geologists in particular. I was the geographer, whose mission it was to make a map of a small portion of the country traversed, to get a general idea of its conformation, and to note valleys and mountains, ice-fields and snow slopes, lava flows and hot springs, mighty rivers and tiny rivulets.</p>
 			</section>
-			<section class="js-section" data-zoom="120%" data-pos="-20%">
+			<section class="js-section" data-zoom="120%" data-pos_large="-30%" data-pos_medium="-70%" data-pos_small="-130%" data-pos_extrasmall = "-160%" data-pos="-20%">
 				<h2><span class="title-up">Reykjanesta</span><span class="title-down">A Helping Hand</span></h2>
 				<p>We were six in all—a semi-scientific party. There was Miss J. A. Hastie, a woman who has travelled much in Europe, Asia, Africa, and America, and who is not unacquainted with our Colonies at the Antipodes, or with the islands of the South Seas. She was specially interested in the botany of the country, in its folklore, and in the people. Then there was Captain W. H. Cope; he had been at sea for the greater part of his life, and had in the course of his journeyings seen much of the world; he was our nautical adviser, and we referred to him in matters connected with the sea. W. Glen, Miss Hastie's cousin, was known as the "handy man" of the party. If anybody was in difficulties, Glen was always on the spot to lend a helping hand. He produced all sorts of things at the right moment. Did any one require a screw-driver, then Glen had it; want a corkscrew, Glen could supply it; a pair of scissors, he produced them—some string, a strap, it was all the same. If a camera struck work, Glen could render the strike ineffective, for he carried two, and could lend one without interfering with his own photographic work. A. W. Hill, of King's College, Cambridge, was our botanist—who describes what he saw. H. H. Thomas, of Balliol, paid special attention to the geological formation of the country that we traversed, and he was frequently to be seen, camera in hand, taking shots at interesting formations—a glaciated lava surface, a volcanic vent, or an immense "erratic" boulder or "perched block," for instance; he also sketched industriously, and sometimes paced the ground compass in hand in order that he might record in his note-book the direction of a line of fissure, or the position of hot springs along that line; or something else of interest to geologists in particular. I was the geographer, whose mission it was to make a map of a small portion of the country traversed, to get a general idea of its conformation, and to note valleys and mountains, ice-fields and snow slopes, lava flows and hot springs, mighty rivers and tiny rivulets.</p>
 				<figure>
@@ -1194,7 +1200,10 @@
 			</section>
 </div>
 	<script src="jquery-1.12.1.min.js"></script>
+
 	<script src="scroll.js"></script>
 	<script src="script.js" type="text/javascript"></script>
+		<script type="text/javascript" src="slick/slick/slick.min.js"></script>
+				
 </body>
 </html>
