--- a/index.html
+++ b/index.html
@@ -53,30 +53,7 @@
 			}
 
 	</style>
-<!--  <animateMotion 
-    xlink:href="#myPath"
-    dur="1s"
-    from="50"
-    to="584.749267578125" 
-    dur="5s"
-    begin="circ-anim + 0.5s"
-    fill="freeze" 
-    stroke-dashoffset="1000";
-    d="path-anim" 
-    stroke-dashoffset= "0"
-    />
 
-		<animateMotion
-			xlink:href="#movingCircle"		
-			dur="5s"
-			begin="click"
-			fill="freeze"
-			d="circ-anim"
-			repeatCount="1">
-			<mpath xlink:href="#myPath" />
-
-		</animateMotion> -->
-		
 			<amcharts:ammap  bottomLatitude="44.387017" rightLongitude="40.220623" topLatitude="52.380834" leftLongitude="22.138577" projection="mercator">
 			</amcharts:ammap>
 	</defs>
@@ -1180,9 +1157,9 @@
 				<p>We created some sort of sensation as we entered the capital of Iceland. The clocks were striking ten as we clattered down the long main street; it was a time when the populace were at leisure and on the street, and they evinced no little curiosity as we rode by them. They were congregated in small groups, and it was evident to us that we were being discussed—and no wonder, for we were a motley-looking cavalcade! We must have presented a very grotesque appearance, clad as we were in oilskins, and covered with mud from head to foot: it had been raining at intervals on the way, and we had had a rather disagreeable journey. </p>
 				<figure>
 				<div class="slider">
-					<div><img class="js-image1" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/9.jpg" /></div>
-					<div><img class="js-image1" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/5.jpg" /></div>
-					<div><img class="js-image1" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/3.jpg" /></div>
+					<img class="js-image1" alt="Slide it!" data-title="slide it!" data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/9.jpg" />	
+					<img class="js-image1" alt="Slide it!" data-title="slide it!"  data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/5.jpg" />	
+					<img class="js-image1" alt="Slide it!" data-title="slide it!"  data-stay="true" data-pos-x="487.588" data-pos-y="412.15" src="img/journey/3.jpg" />	
 				</div>	
 					<figcaption>All things come to an end, and so did our journey when we reached the end of the main street in Reykjavik</figcaption>
 				</figure>
@@ -1193,7 +1170,11 @@
 				<h2><span class="title-up">Reykjanesta</span><span class="title-down">A Helping Hand</span></h2>
 				<p>We were six in all—a semi-scientific party. There was Miss J. A. Hastie, a woman who has travelled much in Europe, Asia, Africa, and America, and who is not unacquainted with our Colonies at the Antipodes, or with the islands of the South Seas. She was specially interested in the botany of the country, in its folklore, and in the people. Then there was Captain W. H. Cope; he had been at sea for the greater part of his life, and had in the course of his journeyings seen much of the world; he was our nautical adviser, and we referred to him in matters connected with the sea. W. Glen, Miss Hastie's cousin, was known as the "handy man" of the party. If anybody was in difficulties, Glen was always on the spot to lend a helping hand. He produced all sorts of things at the right moment. Did any one require a screw-driver, then Glen had it; want a corkscrew, Glen could supply it; a pair of scissors, he produced them—some string, a strap, it was all the same. If a camera struck work, Glen could render the strike ineffective, for he carried two, and could lend one without interfering with his own photographic work. A. W. Hill, of King's College, Cambridge, was our botanist—who describes what he saw. H. H. Thomas, of Balliol, paid special attention to the geological formation of the country that we traversed, and he was frequently to be seen, camera in hand, taking shots at interesting formations—a glaciated lava surface, a volcanic vent, or an immense "erratic" boulder or "perched block," for instance; he also sketched industriously, and sometimes paced the ground compass in hand in order that he might record in his note-book the direction of a line of fissure, or the position of hot springs along that line; or something else of interest to geologists in particular. I was the geographer, whose mission it was to make a map of a small portion of the country traversed, to get a general idea of its conformation, and to note valleys and mountains, ice-fields and snow slopes, lava flows and hot springs, mighty rivers and tiny rivulets.</p>
 				<figure>
-					<img class="js-image2" data-stay="true" data-pos-x="919.995" data-pos-y="312.601" src="img/journey/5.jpg" />
+				<div class="slider">
+					<img class="js-image2" alt="Slide it!" data-title="slide it!"  data-stay="true" data-pos-x="919.995" data-pos-y="312.601" src="img/journey/5.jpg" />
+					<img class="js-image2" alt="Slide it!" data-title="slide it!"  data-stay="true" data-pos-x="919.995" data-pos-y="312.601" src="img/journey/3.jpg" />
+					<img class="js-image2" alt="Slide it!" data-title="slide it!" data-stay="true" data-pos-x="919.995" data-pos-y="312.601" src="img/journey/1.jpg" />
+				</div>
 					<figcaption>I was the geographer, whose mission it was to make a map of a small portion of the country traversed.</figcaption>
 				</figure>
 				<p>Next day rain, fog, and mist prevailed, so there was much whist-playing and smoking below, and much blowing of whistle above. Towards evening we were off the coast of Iceland; the land was not visible, for we were enveloped in fog, but there was no doubt about it, for we could hear that land was not far distant. It may seem strange, but it was a fact, we were really feeling our way along the coast by the aid of the steam-whistle. The land thereabouts rises abruptly from the sea, and the echoes from the sheer faces of rock enabled the officers of the vessel to judge their distance. We went dangerously near to another vessel in the fog, but soon afterwards it cleared off a bit, and there, just abeam on the starboard side, was the other vessel, sufficiently close to be a dangerous neighbour in thick weather. At midnight we were going full speed ahead, but when I awoke at seven in the morning it was to find that our experiences of fog were not at an end, that we were again in a very dense one, and that we were lying-to. After breakfast it lifted sufficiently to allow of a course being shaped for Northfjord, our first port of call in Iceland. Much of the scenery of this fjord was obscured by the thick atmosphere, but occasional glimpses through rifts proved that we were missing many fine scenes that are on view when the conditions are favourable. The first sight of Iceland was obtained at Dalatangi Point, four or five miles to the north of the entrance to Northfjord. In the fog we had gone too far north. Other glimpses on the way were of a corrie near Dalatangi, and the face of the mountains near Mjofifjord. Our stay at Northfjord was of but short duration, and there was no time to go ashore, so the only view we had of the town was obtained from the vessel's deck.</p>
