--- a/pen_tool/drawnMap.html
+++ b/pen_tool/drawnMap.html
@@ -1,7 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<title>Drawn map</title>
+		<script type="text/javascript" src="bezier-editor.js"></script>
+	<script type="text/javascript" src="bezier-animation.js"></script>
+</head>
+<body>
+	<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 15.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.1" class="svg_bg" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="2040.5px" height="1178.5px" viewBox="0 0 2040.5 1178.5" enable-background="new 0 0 2040.5 1178.5" xml:space="preserve">
 <g>
 	<path fill="#FDFCEC" d="M422.985-53.964"/>
@@ -802,7 +813,9 @@
 		761.621,-54.606 766.646,-49.585 768.457,-46.921 772.676,-47.706 773.318,-44.014 770.703,-36.389 774.989,-30.015
 		776.087,-22.985 774.352,-16.603 776.905,-1.831 774.467,11.194 773.19,18.041 774.325,26.917 778.167,30.203 778.528,35.695
 		781.392,39.479 780.741,42.33 783.044,46.419 787.617,54.539 787.93,60.662 796.6,78.552 797.003,90.838 797.691,101.046 	"/>
-	
+<!-- 		<path fill="transparent" stroke="#000"   style = "stroke-dashoffset: 1000px; stroke-dasharray: 20px;" d="M 1191, 215 C 1130, 224, 945, 224, 854, 224 T 854, 224 C 763, 224, 634, 168, 707, 245 T 707, 245 C 780, 322, 841, 321, 896, 371 T 896, 371 C 951, 421, 892, 504, 835, 514 T 835, 514 C 778, 524, 750, 562, 702, 575 T 702, 575 C 654, 588, 635, 594, 648, 607 T 648, 607 C 661, 620, 674, 620, 672, 630 T 672, 630 C 670, 640, 649, 653, 642, 658 T 642, 658 C 635, 663, 643, 684, 629, 676 T 629, 676 C 615, 668, 608, 657, 599, 657 T 599, 657 C 590, 657, 594, 664, 602, 670 T 602, 670 C 610, 676, 619, 681, 610, 685 T 610, 685 C 601, 689, 596, 693, 593, 692 T 593, 692 C 590, 691, 589, 699, 593, 706 T 593, 706 C 597, 713, 595, 720, 581, 720 T 581, 720 C 567, 720, 568, 717, 550, 725 T 550, 725 C 532, 733, 528, 740, 521, 740 T 521, 740 C 514, 740, 512, 745, 495, 749 T 495, 749 C 478, 753, 463, 753, 455, 758 T 455, 758 C 447, 763, 439, 765, 433, 776 T 433, 776 C 427, 787, 423, 787, 423, 793 T 423, 793 C 423, 799, 421, 810, 424, 812 T 424, 812 C 427, 814, 432, 817, 440, 818 T 440, 818 C 448, 819, 452, 819, 457, 819 T 457, 819 C 462, 819, 462, 823, 472, 817 T 472, 817 C 482, 811, 476, 813, 491, 809 T 491, 809 C 506, 805, 499, 799, 524, 806 T 524, 806 C 549, 813, 552, 816, 560, 816 T 560, 816 C 568, 816, 569, 797, 569, 794 T 569, 794 C 569, 791, 569, 789, 578, 785 T 578, 785 C 587, 781, 587, 776, 590, 775 T 590, 775 C 593, 774, 594, 769, 600, 769 T 600, 769 C 606, 769, 620, 767, 629, 767 T 629, 767 C 638, 767, 659, 774, 663, 782 T 663, 782 C 667, 790, 672, 805, 676, 808 T 676, 808 C 680, 811, 688, 810, 694, 805 T 694, 805 C 700, 800, 699, 799, 705, 793 T 705, 793 C 711, 787, 710, 781, 723, 776 T 723, 776 C 736, 771, 745, 768, 756, 767 T 756, 767 C 767, 766, 770, 762, 780, 765 T 780, 765 C 790, 768, 797, 772, 800, 777 T 800, 777 C 803, 782, 804, 783, 803, 789 T 803, 789 C 802, 795, 786, 800, 806, 804 T 806, 804 C 826, 808, 820, 827, 848, 812 T 848, 812 C 876, 797, 877, 797, 891, 784 T 891, 784 C 905, 771, 906, 732, 929, 761 T 929, 761 C 952, 790, 953, 798, 970, 825 T 970, 825 C 987, 852, 977, 868, 1004, 877 T 1004, 877 C 1031, 886, 1033, 892, 1049, 852 T 1049, 852 C 1065, 812, 1067, 794, 1073, 768 T 1073, 768 C 1079, 742, 1105, 690, 1068, 692 T 1068, 692 C 1031, 694, 959, 747, 964, 704 T 964, 704 C 969, 661, 983, 660, 1020, 645 T 1020, 645 C 1057, 630, 1067, 606, 1059, 588 T 1059, 588 C 1051, 570, 1033, 586, 1024, 556 T 1024, 556 C 1015, 526, 1022, 531, 1065, 512 T 1065, 512 C 1108, 493, 1154, 463, 1154, 413 T 1154, 413 C 1154, 363, 1129, 385, 1176, 314 T 1176, 314 C 1223, 243, 1257, 233, 1231, 194 T 1231, 194 C 1205, 155, 1205, 168, 1168, 150 T 1168, 150 C 1131, 132, 1087, 125, 1017, 104 T 1017, 104 C 947, 83, 1010, 56, 900, 75 T 900, 75 C 790, 94, 846, 85, 776, 124 T 776, 124 C 706, 163, 728, 149, 674, 163 T">
+			
+		</path> -->
 </g>
 <g>
 	<text transform="matrix(1 0 0 1 593.0767 771.5918)" fill="#939598" font-family="'Helvetica Neue',Helvetica,Arial,sans-serif" font-weight='bold' font-size="5.1197">Kleifarvatn</text>
@@ -838,3 +851,8 @@
 	<circle id="Eyjafjallajökull" display="inline" fill="#405b54" cx="1169.476" cy="930.54" r="5.782"/>
 </g>
 </svg>
+
+	<script src="libs/jquery-1.12.1.min.js"></script>
+	<script src="drawMap.js"></script>
+</body>
+</html>
