add stop points by click+shift

--- a/pen_tool/drawnMap.html
+++ b/pen_tool/drawnMap.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Drawn map</title>
+	<script data-main="drawnMap.js" src="require.js"></script>
 		<script type="text/javascript" src="bezier-editor.js"></script>
 	<script type="text/javascript" src="bezier-animation.js"></script>
 	<style>
